integration-tests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: vcluster
  annotations:
    checkov.io/skip1: "CKV_K8S_43=Image should use digest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: ${IMAGE}
          name: app
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 1000
