integration-tests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: vcluster
  name: app-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
  selector:
    app: app
